kubernates/deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: yanishub1/youtube:5
          ports:
            - containerPort: 3000  # Your Node.js application should listen on port 3000

---

apiVersion: v1
kind: Service
metadata:
  name: youtube-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80  # You can use port 80 here for HTTP traffic
      targetPort: 3000  # This should match the port your Node.js application is running on (3000)
  type: NodePort
